--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,6 @@
     font-family: 'Bebas Neue', cursive;
     font-size: 20px;
     padding: 17px 50px;
-
-    
 }
 .topo nav a:hover{
     background-color: #000;
@@ -39,9 +37,14 @@
    max-width: 600px;
    height: 60px;
    list-style-type: none;/*Remove os marcadore da lista*/
-   display: flex; 
+}
+#meusLinks{
+    display: flex; 
    justify-content: space-around;
    align-items: center;
+}
+.btnMenu{
+    display: none;
 }
 .banner{
     width: 100%;
@@ -215,7 +218,7 @@
     right: 20px;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1199px){
     .topo nav{
         width: 80%;
     }
@@ -261,4 +264,40 @@
     .text-endereco img{
         position: unset;
     } 
+}
+@media screen and (max-width: 767px){
+
+    .btnMenu{
+        display: block;
+    }
+    .topo nav{
+        width: 100%;
+    }
+    .topo nav ul{
+        width: 100%;
+        max-width: 100%;
+        height: 350px;
+        flex-direction: column;
+        position: absolute;
+        background-color: #000;
+        top:60px;
+        left: 0;
+
+    }
+    #meusLinks{
+        display: none;
+    }
+    .banner_text h1{
+        font-size: 60px;
+    }
+
+}
+/* Resolução do 375 até 575 */
+@media screen and (max-width: 575px){
+    .banner_text h1{
+        font-size: 50px;
+    }
+    .banner_text p{
+        font-size: 40px;
+    }
 }
